--- a/style.css
+++ b/style.css
@@ -5,6 +5,109 @@
 .headeFondo{
 	background-image: url(./imagenes/v1014-pattern-001b.jpg);
 }
+/*--Keyframes--*/
+@keyframes aparecer {
+	from {
+	 opacity: 0;
+	}
+	to {
+	 opacity: 1;
+   }
+}
+
+@keyframes typing {
+	from {
+	  width: 0;
+	}
+	to {
+	  width: 100%;
+	}
+}
+@keyframes blink {
+	50% {
+	  border-color: transparent;
+	}
+}
+
+@keyframes aparecer {
+	from {
+	 opacity: 0;
+	}
+	to {
+	 opacity: 1;
+   }
+}
+
+@keyframes aparecer {
+	from {
+	 opacity: 0;
+	}  
+	to {
+	 opacity: 1;
+   }
+}
+
+@keyframes aparecer {
+	from {
+	 opacity: 0;
+	}
+	to {
+	 opacity: 1;
+   }
+}
+
+/*--Keyframes 404--*/
+
+@-webkit-keyframes smallmove {
+	0% { top: 10px; left: 45%; opacity: 1; }
+	25% { top: 300px; left: 40%; opacity:0.7; }
+	50% { top: 240px; left: 55%; opacity:0.4; }
+	75% { top: 100px; left: 40%;  opacity:0.6; }
+	100% { top: 10px; left: 45%; opacity: 1; }
+}
+@keyframes smallmove {
+	0% { top: 10px; left: 45%; opacity: 1; }
+	25% { top: 300px; left: 40%; opacity:0.7; }
+	50% { top: 240px; left: 55%; opacity:0.4; }
+	75% { top: 100px; left: 40%;  opacity:0.6; }
+	100% { top: 10px; left: 45%; opacity: 1; }
+}
+
+@-webkit-keyframes medmove {
+	0% { top: 0px; left: 20%; opacity: 1; }
+	25% { top: 300px; left: 80%; opacity:0.7; }
+	50% { top: 240px; left: 55%; opacity:0.4; }
+	75% { top: 100px; left: 40%;  opacity:0.6; }
+	100% { top: 0px; left: 20%; opacity: 1; }
+}
+
+@keyframes medmove {
+	0% { top: 0px; left: 20%; opacity: 1; }
+	25% { top: 300px; left: 80%; opacity:0.7; }
+	50% { top: 240px; left: 55%; opacity:0.4; }
+	75% { top: 100px; left: 40%;  opacity:0.6; }
+	100% { top: 0px; left: 20%; opacity: 1; }
+}
+
+@-webkit-keyframes bigmove {
+	0% { top: 0px; right: 4%; opacity: 0.5; }
+	25% { top: 100px; right: 40%; opacity:0.4; }
+	50% { top: 240px; right: 45%; opacity:0.8; }
+	75% { top: 100px; right: 35%;  opacity:0.6; }
+	100% { top: 0px; right: 4%; opacity: 0.5; }
+}
+@keyframes bigmove {
+	0% { top: 0px; right: 4%; opacity: 0.5; }
+	25% { top: 100px; right: 40%; opacity:0.4; }
+	50% { top: 240px; right: 45%; opacity:0.8; }
+	75% { top: 100px; right: 35%;  opacity:0.6; }
+	100% { top: 0px; right: 4%; opacity: 0.5; }
+}
+/*--import 404--*/
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,700);
+
+/*-----------------------------------------------------------------------------*/
+
 /*header*/
 .navbar-light .navbar-nav .nav-link{
     color: blanchedalmond;
@@ -12,50 +115,53 @@
     font-family: merienda;
     margin: 2vw;
 }
+
 .navbar-light .navbar-nav .nav-link:hover{
 	transform: scale(1.3);
 	transition: transform 1s;
 	color: #ecf3f7;
 	border: solid 0.1em;
 	border-radius: 0.5rem;
-
 }
 
 .navbar-collapse{
     width: 60vw;
-    margin-left: 5vw;
-    
+    margin-left: 5vw;  
 }
+
 .logo{
     width: 10vw;
     border-radius: 2vw;
 }
+
 .navbar-brand:hover{
 	transform: scale(1.2);
 	transition: transform 2s;
-	
-
 }
-
 .alter{
-	color: rgb(85, 7, 81);
-	opacity: 80%;
+animation-name: example;
+animation-duration: 5s;
+animation-iteration-count: infinite;
 }
 
-.logo1{
-    width: 4rem;
-    border-radius: 1rem;
-  
+@keyframes example {
+0% {color: wheat;}
+25% {color: rgb(148, 158, 131);}
+50% {color: rgb(219, 146, 221);}
+75% {color: rgb(116, 177, 185);}
+100% {color: rgb(212, 162, 105);}
 }
-.tex{
-    width: 20rem;
-}
+
+	
+/*-----------------------------------------------------------------------------*/
+
+/*--Home--*/
 
 .carousel-item img{
     height: 25vw;
 	border: solid plum;
-
 }
+
 h3{
     display: flex;
     justify-content: center;
@@ -63,8 +169,6 @@ h3{
     font-family: merienda;
 	font-weight: 700;
     color: rgb(161, 75, 147);
-	
-
 }
 
 .historia{
@@ -75,7 +179,6 @@ h3{
 	border-radius: 1rem;
 }
 
-
 h5{
 	font-family: merienda;
 	font-weight: 600;
@@ -83,26 +186,11 @@ h5{
     color: darkorchid;
 	animation-duration: 3s;
 	animation-name: aparecer;
-	animation-iteration-count:infinite;
-	
+	animation-iteration-count:infinite;	
 }
-@keyframes aparecer {
-	from {
-	 opacity: 0;
-	}
-  
-	to {
-	 opacity: 1;
-   }
-  }
-main .cajas{
-    margin-left: 8rem;
-}
-.codigo{
-    
-    text-align: center;
-    color: blueviolet;
-}
+/*-----------------------------------------------------------------------------*/
+
+/*--Footer--*/
 
 .redes{
     width: 3rem;
@@ -110,6 +198,7 @@ main .cajas{
     border: solid pink;   
 	border-radius: .5rem;
 }
+
 footer{
 background-color: #aa53a3a6;       
 }
@@ -117,9 +206,9 @@ background-color: #aa53a3a6;
 h4{
 	font-family: merienda;
 	text-decoration: underline;
-	color: wheat;
-	
+	color: wheat;	
 }
+
 .footerTexto{
 	color: rgb(91, 8, 86);
 	font-family: merienda;
@@ -134,30 +223,17 @@ h4{
   	border-right: 0.15em solid #18bdec;
   	animation: typing 4s steps(38) 1s 1 normal both, blink 1s steps(1) infinite;
 }
-@keyframes typing {
-	from {
-	  width: 0;
-	}
-	to {
-	  width: 100%;
-	}
-  }
-  @keyframes blink {
-	50% {
-	  border-color: transparent;
-	}
-  }
 
 .footerTextoRedes{
 	color: wheat;	
 	padding-top: .5rem;
 }
 
-
 .footerRedes{
 	margin-left: 1rem;
 	padding: 1rem;
 }
+
 .recuadro{
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	color: white;
@@ -166,104 +242,93 @@ h4{
 	border-top: solid rgb(91, 8, 86);
 	border-radius: 1rem;
 }
+
 .menuLinkFooter{
 	color: wheat;
 }
+
 .copy{
 	color: white;
 }
+/*-----------------------------------------------------------------------------*/
 
 /*Terapias*/
+
 .tituloTerapias{
 	animation-duration: 3s;
 	animation-name: aparecer;
 	animation-iteration-count:infinite;
 }
-@keyframes aparecer {
-	from {
-	 opacity: 0;
-	}
-  
-	to {
-	 opacity: 1;
-   }
-  }
+
 .menuTerapias p{
 	text-align: center;
-	color: rgb(161, 75, 147);
-	
+	color: rgb(161, 75, 147);	
 }
+
 .menuTerapias{
 	border: solid;
 	border-radius: 1rem;
 	color: rgb(161, 75, 147);
 	margin: 1rem;
 }
+/*-----------------------------------------------------------------------------*/
+
 /*Talleres y Cursos*/
+
 .taller{
     border: solid rgb(161, 75, 147);
     border-radius: 1rem;
 }
+
 .taller {
 	color: rgb(161, 75, 147);
 }
+
 .taller u{
 	font-weight: 600;
 }
+
 .tituloTalleres{
 	animation-duration: 5s;
 	animation-name: aparecer;
 	animation-iteration-count:initial;
-	
 }
-@keyframes aparecer {
-	from {
-	 opacity: 0;
-	}
-  
-	to {
-	 opacity: 2;
-   }
-  }
+/*-----------------------------------------------------------------------------*/
+
 /*Tienda*/
+
 .tituloTienda{
 	animation-duration: 5s;
 	animation-name: aparecer;
 	animation-iteration-count:initial;
 }
-@keyframes aparecer {
-	from {
-	 opacity: 0;
-	}
-  
-	to {
-	 opacity: 1;
-   }
-  }
+
 .imgTodas{
 	width: 12rem;
 	height: 10rem;
 	border: solid pink;
 	border-radius: 1rem;
 }
-
+/*-----------------------------------------------------------------------------*/
 
 /*Formulario*/
+
 .form-control{
 	border: solid rgba(72, 6, 69, 0.631);
 	background-color: rgba(200, 151, 204, 0.438);
 	color:darkorchid;
 } 
+
 .form-control :focus{
 	font-family: color pink;
 }
+
 .video{
 	margin-top: 10rem;
 	text-align: center;
 }
-
+/*-----------------------------------------------------------------------------*/
 /*404*/    
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,700);
 
 body {
   width:100%;
@@ -365,49 +430,4 @@ body {
 	-webkit-animation-delay: 1s;
 }
 
-@-webkit-keyframes smallmove {
-	0% { top: 10px; left: 45%; opacity: 1; }
-	25% { top: 300px; left: 40%; opacity:0.7; }
-	50% { top: 240px; left: 55%; opacity:0.4; }
-	75% { top: 100px; left: 40%;  opacity:0.6; }
-	100% { top: 10px; left: 45%; opacity: 1; }
-}
-@keyframes smallmove {
-	0% { top: 10px; left: 45%; opacity: 1; }
-	25% { top: 300px; left: 40%; opacity:0.7; }
-	50% { top: 240px; left: 55%; opacity:0.4; }
-	75% { top: 100px; left: 40%;  opacity:0.6; }
-	100% { top: 10px; left: 45%; opacity: 1; }
-}
-
-@-webkit-keyframes medmove {
-	0% { top: 0px; left: 20%; opacity: 1; }
-	25% { top: 300px; left: 80%; opacity:0.7; }
-	50% { top: 240px; left: 55%; opacity:0.4; }
-	75% { top: 100px; left: 40%;  opacity:0.6; }
-	100% { top: 0px; left: 20%; opacity: 1; }
-}
-
-@keyframes medmove {
-	0% { top: 0px; left: 20%; opacity: 1; }
-	25% { top: 300px; left: 80%; opacity:0.7; }
-	50% { top: 240px; left: 55%; opacity:0.4; }
-	75% { top: 100px; left: 40%;  opacity:0.6; }
-	100% { top: 0px; left: 20%; opacity: 1; }
-}
-
-@-webkit-keyframes bigmove {
-	0% { top: 0px; right: 4%; opacity: 0.5; }
-	25% { top: 100px; right: 40%; opacity:0.4; }
-	50% { top: 240px; right: 45%; opacity:0.8; }
-	75% { top: 100px; right: 35%;  opacity:0.6; }
-	100% { top: 0px; right: 4%; opacity: 0.5; }
-}
-@keyframes bigmove {
-	0% { top: 0px; right: 4%; opacity: 0.5; }
-	25% { top: 100px; right: 40%; opacity:0.4; }
-	50% { top: 240px; right: 45%; opacity:0.8; }
-	75% { top: 100px; right: 35%;  opacity:0.6; }
-	100% { top: 0px; right: 4%; opacity: 0.5; }
-}
     
